--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
+    "gl-matrix": "^3.4.4",
+    "gsap": "^3.13.0",
+    "ogl": "^1.0.11",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13"
